--- a/views/globals/footer.ejs
+++ b/views/globals/footer.ejs
@@ -1,3 +1,7 @@
+<% if (pagination) { %>
+    <%- include('pagination') %>
+<% } %>
+
 <!--  jQuery, popper.js, bootstrap.js -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
