--- a/views/globals/pagination.ejs
+++ b/views/globals/pagination.ejs
@@ -1,17 +1,17 @@
 <nav class="nav justify-content-center pagination">
     <% if (pagination.first) { %>
-        <a href="<%= pagination.first.url %>" class="nav-link"><< first</a>
+        <a href="/sets/?set=<%= pagination.first.set %>&page=<%= pagination.first.page %>" class="nav-link"><< first</a>
     <% } %>
     <% if (pagination.prev) { %>
-        <a href="<%= pagination.prev.url %>" class="nav-link">< prev</a>
+        <a href="/sets/?set=<%= pagination.prev.set %>&page=<%= pagination.prev.page %>" class="nav-link">< prev</a>
     <% } %>
 
     <span class="navbar-brand">I should have pagination.</span>
 
     <% if (pagination.next) { %>
-        <a href="<%= pagination.next.url %>" class="nav-link">next ></a>
+        <a href="/sets/?set=<%= pagination.next.set %>&page=<%= pagination.next.page %>" class="nav-link">next ></a>
     <% } %>
     <% if (pagination.last) { %>
-        <a href="<%= pagination.last.url %>" class="nav-link">last >></a>
+        <a href="/sets/?set=<%= pagination.last.set %>&page=<%= pagination.last.page %>" class="nav-link">last >></a>
     <% } %>
 </nav>
