--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,3 @@
-
 .page-title {
     display: block;
     width: 100%;
@@ -6,6 +5,23 @@
     margin: 20px 0 30px;
 }
 
+/*==============================================================================
+ *
+ * LOGIN
+ *
+ =============================================================================*/
+.form-signin {
+    position: relative;
+    width: 90%;
+    margin: 20px auto;
+    max-width: 360px;
+}
+
+/*==============================================================================
+ *
+ * CARDS / SETS LISTS
+ *
+ =============================================================================*/
 .set-wrapper {
     padding: 0 60px;
     max-width: 1400px;
