--- a/views/deck-builder.ejs
+++ b/views/deck-builder.ejs
@@ -15,16 +15,28 @@
     </header>
 
     <%- messages() %>
+
     <% if (user.decks) { %>
         <div class="container">
             <% user.decks.forEach(function(deck) { %>
-                <h3><%= deck.type %> Type Deck</h3>
+                <h4><%= deck.type %> Type Deck</h4>
                 <section class="row">
                     <% deck.cards.forEach(function(card) { %>
-                        <div class="card">
-                            <img src="/public/images/card-back.png" />
-                            <p class="card-text"><%= card.name %></p>
-                        </card>
+                        <article class="card" style="width: 20rem;">
+                            <div class="card-body">
+                              <h4 class="card-title"><%= card.name %></h4>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Cras justo odio</li>
+                              <li class="list-group-item">Dapibus ac facilisis in</li>
+                              <li class="list-group-item">Vestibulum at eros</li>
+                            </ul>
+                            <div class="card-body">
+                              <a href="#" class="card-link">Card link</a>
+                              <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </article>
                     <% }) %>
                 </section>
             <% }); %>
