--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,54 @@
 <%- include('globals/head') %>
 <main>
-    <div class="jumbotron">
+    <header class="jumbotron">
       <div class="container">
         <h1 class="display-3">Hello, <%= user.username %>!</h1>
-        <p>This is the entry page. For now, if you're logged in you can get the load cards page from here.</p>
-        <p>So, go ahead. Load some cards:</p>
-        <a class="btn btn-primary btn-lg" href="/loader" role="button">Load Cards &raquo;</a>
-        <a class="btn btn-secondary btn-lg" href="/deck-builder" role="button">Build Deck &raquo;</a>
+
+        <%# if (!hasCards) { %>
+            <p>This is the entry page. For now, if you're logged in you can get the load cards page from here.</p>
+            <p>So, go ahead. Load some cards:</p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="/loader" role="button">Load Cards &raquo;</a>
+            </p>
+        <%# } %>
+
+        <% if (user.decks) { %>
+            <p>You currently have <span><%= user.decks.length %></span> decks</p>
+        <% } else { %>
+            <p>You don't have any decks.</p>
+            <a class="btn btn-danger btn-lg" href="/deck-builder" role="button">Build Deck >></a>
+        <% } %>
+
       </div>
-    </div>
+    </header>
+
+    <%- messages() %>
+
+    <% if (user.decks) { %>
+        <div class="container">
+            <% user.decks.forEach(function(deck) { %>
+                <h4><%= deck.type %> Type Deck</h4>
+                <section class="row">
+                    <% deck.cards.forEach(function(card) { %>
+                        <article class="card" style="width: 20rem;">
+                            <div class="card-body">
+                              <h4 class="card-title"><%= card.name %></h4>
+                              <p class="card-text"><%= card.text %></p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Cras justo odio</li>
+                              <li class="list-group-item">Dapibus ac facilisis in</li>
+                              <li class="list-group-item">Vestibulum at eros</li>
+                            </ul>
+                            <div class="card-body">
+                              <a href="#" class="card-link">Card link</a>
+                              <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </article>
+                    <% }) %>
+                </section>
+            <% }); %>
+        </div>
+    <% } %>
 </main>
 <%- include('globals/footer') %>
